updated index file task-1

--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -4,9 +4,16 @@
         <title>
             Deva-Portfolio
         </title>
-        <h1>!Hi, I'm Devanandhana</h1>
+        <h1>I'm Devanandhana,</h1>
+        <h2>Web Developer | Problem Solver | Creative Thinker</h2>
     </head>
     <body>
-
+        <p1>
+            <h3>About Me</h3>
+            <img scr="", width="", height="">
+            <p0>
+                
+            </p0>
+        </p1>
     </body>
 </html>
