updated index file

--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -4,8 +4,8 @@
         <title>
             Deva-Portfolio
         </title>
-        <h1>I'm Devanandhana,</h1>
-        <h2>Web Developer | Problem Solver | Creative Thinker</h2>
+        <h1>Devanandhana P S</h1>
+        <h2>Web Developer | AI & DS Enthusiast | Chess Enthusiast</h2>
     </head>
     <body>
         <p1>
