updated index file

--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>
-            Deva-Portfolio
-        </title>
-        <h1>Devanandhana P S</h1>
-        <h2>Web Developer | AI & DS Enthusiast | Chess Enthusiast</h2>
-    </head>
-    <body>
-        <p1>
-            <h2>About Me</h2>
-            <img scr="", width="", height="">
-            <p0>
-                
-            </p0>
-        </p1>
-    </body>
-</html>
+<html lang="en">
+<head>
+    <title>
+        Deva-Portfolio
+    </title>
+    <h1>Devanandhana P S</h1>
+    <h2>Web Developer | AI & DS Enthusiast | Chess Enthusiast</h2>
+</head>
+<body>
+    <p1>
+        <h2>About Me</h2>
+        <img scr="", width="", height="">
+        <p0>
+              
+        </p0>
+    </p1>
+</body>
