updated index file

--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -4,10 +4,13 @@
     <title>
         Deva-Portfolio
     </title>
-    <h1>Devanandhana P S</h1>
-    <h2>Web Developer | AI & DS Enthusiast | Chess Enthusiast</h2>
 </head>
+
 <body>
+    <header>
+        <h1>Devanandhana P S</h1>
+        <h2>Web Developer | AI & DS Enthusiast | Chess Enthusiast</h2>
+    </header>
     <p1>
         <h2>About Me</h2>
         <img scr="", width="", height="">
