saved changes in index file

--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Devanandhana P S</h1>
-        <h2>Web Developer | AI & DS Enthusiast | Chess Enthusiast</h2>
+        <p1>Web Developer | AI & DS Enthusiast | Chess Enthusiast</p1>
     </header>
     <p1>
         <h2>About Me</h2>
