updated index file

--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8"/>
+    <meta name = "viewport">
     <title>
         Deva-Portfolio
     </title>
@@ -9,7 +11,7 @@
 <body>
     <header>
         <h1>Devanandhana P S</h1>
-        <p1>Web Developer | AI & DS Enthusiast | Chess Enthusiast</p1>
+        <p1>Web Developer | AI & DS Enthusiast | </p1>
     </header>
     <p1>
         <h2>About Me</h2>
