updated index file

--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -2,17 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta name = "viewport">
+    <meta name = "viewport" content="width=device-width, initial-scale=1.0"/>
     <title>
         Deva-Portfolio
     </title>
 </head>
 
 <body>
-    <header>
+    <div class="container">
+        <header>
+            <div class="logo">DN</div>
+            <nav class="nav-links">
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
+                <a href="resume">Resume</a>
+                <a href="contact">Contact</a>
+            </nav>
+        </header>
+    
+    <main class="intro">
         <h1>Devanandhana P S</h1>
-        <p1>Web Developer | AI & DS Enthusiast | </p1>
-    </header>
+        <p1>Web Developer &nbsp;|&nbsp; AI & DS Enthusiast </p1>
+    </main>
+
     <p1>
         <h2>About Me</h2>
         <img scr="", width="", height="">
