--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -16,8 +16,8 @@
                 <a href="#about">About</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
-                <a href="resume">Resume</a>
-                <a href="contact">Contact</a>
+                <a href="#resume">Resume</a>
+                <a href="#contact">Contact</a>
             </nav>
         </header>
     
