--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -6,6 +6,8 @@
     <title>
         Deva-Portfolio
     </title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 
 <body>
@@ -26,11 +28,5 @@
         <p1>Web Developer &nbsp;|&nbsp; AI & DS Enthusiast </p1>
     </main>
 
-    <p1>
-        <h2>About Me</h2>
-        <img scr="", width="", height="">
-        <p0>
-              
-        </p0>
-    </p1>
+    
 </body>
