updated index file

--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -24,8 +24,10 @@
         </header>
     
     <main class="intro">
-        <h1>Devanandhana P S</h1>
-        <p1>Web Developer &nbsp;|&nbsp; AI & DS Enthusiast </p1>
+        <section>
+            <h1>Devanandhana P S</h1>
+            <p1>Web Developer &nbsp;|&nbsp; AI & DS Enthusiast </p1>
+        </section>
     </main>
 
     
