updated index file

--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -30,5 +30,11 @@
         </section>
     </main>
 
+    <div class="socials">
+        <a href="https://twitter.com/yourprofile" target="_blank"> <i class="fab fa-linked-in"></i> </a>
+        <a href="" target="_blank"> <i class="fab fa-github"></i></a>
+        <a href="" target="_blank"> <i  class="fab fa-instagram"></i></a>
+    </div>
+
     
 </body>
