--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -31,7 +31,7 @@
     </main>
 
     <div class="socials">
-        <a href="https://twitter.com/yourprofile" target="_blank"> <i class="fab fa-linked-in"></i> </a>
+        <a href="" target="_blank"> <i class="fab fa-linked-in"></i> </a>
         <a href="" target="_blank"> <i class="fab fa-github"></i></a>
         <a href="" target="_blank"> <i  class="fab fa-instagram"></i></a>
     </div>
