updated index file

--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -23,18 +23,18 @@
             </nav>
         </header>
     
-    <main class="intro">
-        <section>
-            <h2>Devanandhana P S</h2>
-            <p1>Web Developer &nbsp;|&nbsp; AI & DS Enthusiast </p1>
-        </section>
-    </main>
+        <main class="intro">
+            <section>
+                <h2>Devanandhana P S</h2>
+                <p1>Web Developer &nbsp;|&nbsp; AI & DS Enthusiast </p1>
+            </section>
+        </main>
 
-    <div class="socials">
-        <a href="" target="_blank"> <i class="fab fa-linkedin-in"></i> </a>
-        <a href="" target="_blank"> <i class="fab fa-github"></i></a>
-        <a href="" target="_blank"> <i  class="fab fa-instagram"></i></a>
+        <div class="socials">
+            <a href="" target="_blank"> <i class="fab fa-linkedin-in"></i> </a>
+            <a href="" target="_blank"> <i class="fab fa-github"></i></a>
+            <a href="" target="_blank"> <i  class="fab fa-instagram"></i></a>
+        </div>
     </div>
-
     
 </body>
