--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="overlay"></div>
     <div class="container">
         <header>
             <div class="logo">DN</div>
