--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -16,7 +16,7 @@
         <header>
             <div class="logo">DN</div>
             <nav class="nav-links">
-                <a href="#about">About</a>
+                <a href="about.html">About</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
                 <a href="#resume">Resume</a>
@@ -39,3 +39,4 @@
     </div>
     
 </body>
+</html>
