--- a/LEVEL-1/TASK-1/about.html
+++ b/LEVEL-1/TASK-1/about.html
@@ -6,14 +6,20 @@
 
     </head>
     <body>
-        <p0>I'm Deva Nandhana,</p0>
-        <p1>
+        <div class="about-img">
+            <img src="", alt="Deva's pic"/>
+        </div>
+        <div class="about-text">
+            <p0>I'm Deva Nandhana,</p0>
+            <p1>
             A junior-year engineering student with a passion for turning ideas into digital reality.
             Whether it's crafting clean responsive web designs or diving into AI/ML projects, I love 
             blending creativity with logic. I belive tech should be exciting - so I make sure to 
             keep the fun alive while building things that matter. Looking to grow, collaborate and 
             cretae work that's as impactful as it is professional.
-        </p1>
+            </p1>
+        </div>
+        
         <p2>Name: Devanandhana P S</p2>
         <p3>Email: 1115d.va@gmail.com</p3>
         <p4>Age: 20</p4>
