updated about file

--- a/LEVEL-1/TASK-1/about.html
+++ b/LEVEL-1/TASK-1/about.html
@@ -9,6 +9,7 @@
         <div class="about-img">
             <img src="", alt="Deva's pic"/>
         </div>
+
         <div class="about-text">
             <p0>I'm Deva Nandhana,</p0>
             <p1>
@@ -19,10 +20,13 @@
             cretae work that's as impactful as it is professional.
             </p1>
         </div>
-        
-        <p2>Name: Devanandhana P S</p2>
+
+        <div class="about-info">
+            <p2>Name: Devanandhana P S</p2>
         <p3>Email: 1115d.va@gmail.com</p3>
         <p4>Age: 20</p4>
         <p5>From: Wayanad,Kerala,India</p5>
+        </div>
+        <a href="index.html" class="close-btn"> X </a>
     </body>
 </html>
