--- a/LEVEL-1/TASK-1/about.html
+++ b/LEVEL-1/TASK-1/about.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <h1>ABOUT ME</h1>
-        <h2>GET TO KNOW ME</h2>
-
+        <meta charset="UTF-8"/>
+        <meta name = "viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
     </head>
     <body>
         <div class="about-img">
             <img src="", alt="Deva's pic"/>
+        </div>
+
+        <div class="about-head">
+            <h1>ABOUT ME</h1>
+            <h2>GET TO KNOW ME</h2>
         </div>
 
         <div class="about-text">
