--- a/LEVEL-1/TASK-1/about.html
+++ b/LEVEL-1/TASK-1/about.html
@@ -4,12 +4,15 @@
         <meta charset="UTF-8"/>
         <meta name = "viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Deva-Portfolio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
     </head>
     <body>
         <div class="about-img">
-            <img src="", alt="Deva's pic"/>
+            <img src=""/>
         </div>
 
         <div class="about-head">
