updated about page file

--- a/LEVEL-1/TASK-1/about.html
+++ b/LEVEL-1/TASK-1/about.html
@@ -30,12 +30,12 @@
             cretae work that's as impactful as it is professional.
             </p1>
         </div>
-
+        <hr class="section-divider"/>
         <div class="about-info">
             <p2>Name: Devanandhana P S</p2>
-        <p3>Email: 1115d.va@gmail.com</p3>
-        <p4>Age: 20</p4>
-        <p5>From: Wayanad,Kerala,India</p5>
+            <p3>Email: 1115d.va@gmail.com</p3>
+            <p4>Age: 20</p4>
+            <p5>From: Wayanad,Kerala,India</p5>
         </div>
         <a href="index.html" class="close-btn"> X </a>
     </body>
