updated skills page

--- a/LEVEL-1/TASK-1/skills.html
+++ b/LEVEL-1/TASK-1/skills.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
     </head>
     <body>
+        <div class="overlay"></div>
         <div class="skills-head">
             <h1>TECH STACK</h1>
             <h2>TECH SKILLS</h2>
@@ -33,7 +34,7 @@
         </div>
 
         <div class="skills-box2">
-            <h4>Database & Tools</h4>
+            <h3>Database & Tools</h3>
             <p4>
                 <ul>
                     <li>--MySQL</li>
@@ -45,13 +46,14 @@
             </p4>
         </div>
 
-        <div class="sklls-box-3">
-            <h5>AI & Data Science</h5>
+        <div class="skills-box3">
+            <h3>AI & Data Science</h3>
             <ul>
                 <li>AI/ML (Basics)</li>
                 <li>Data Science</li>
                 <li>Data Visulaization (Basics)</li>
             </ul>
         </div>
+        <a href="index.html" class="close-btn"> X </a>
     </body>
 </html>
