completed about and skills page

--- a/LEVEL-1/TASK-1/skills.html
+++ b/LEVEL-1/TASK-1/skills.html
@@ -20,33 +20,36 @@
         </div>
 
         <div class="skills-box1">
+            <div class="overlay-boxes1"></div>
             <h3>Programming & Scripting</h3>
             <p3>
                 <ul>
-                    <li>--C</li>
-                    <li>--Python</li>
-                    <li>--Java</li>
-                    <li>--HTML</li>
-                    <li>--CSS</li>
-                    <li>--JavaScript</li>
+                    <li>C</li>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
                 </ul>
             </p3>
         </div>
 
         <div class="skills-box2">
+            <div class="overlay-boxes2"></div>
             <h3>Database & Tools</h3>
             <p4>
                 <ul>
-                    <li>--MySQL</li>
-                    <li>--PostgreSQL</li>
-                    <li>--Git</li>
-                    <li>--Docker</li>
-                    <li>--SQL*Plus</li>
+                    <li>MySQL</li>
+                    <li>PostgreSQL</li>
+                    <li>Git</li>
+                    <li>Docker</li>
+                    <li>SQL*Plus</li>
                 </ul>
             </p4>
         </div>
 
         <div class="skills-box3">
+            <div class="overlay-boxes3"></div>
             <h3>AI & Data Science</h3>
             <ul>
                 <li>AI/ML (Basics)</li>
