updated resume file

--- a/LEVEL-1/TASK-1/resume.html
+++ b/LEVEL-1/TASK-1/resume.html
@@ -14,6 +14,38 @@
     </head>
 
     <body>
-        
+        <div class="overlay"></div>
+        <div class="resume-head">
+            <h1>SUMMARY</h1>
+            <h2>RESUME</h2>
+        </div>
+
+        <div class="resume-edu">
+            <h3>My Education</h3>
+            <div class="resume-edu-info1">
+                <div class="overlay-edu"></div>
+                <p1>
+                    2015 - 2022
+                    10th/12th Education
+                    Jawahar Navodaya Vidyalay Lakkidi, Wayanad, Kerala
+                </p1>
+            </div>
+            <div class="resume-edu-info2">
+                <div class="overlay-edu"></div>
+                <p2>
+                    2023-2027
+                    Btech. Artificial Intelligence aAnd Data Science
+                    Karunya Institute of Technology and Science Coimbatore, Tamil nadu
+                </p2>
+            </div>
+            <h4>My Experience</h4>
+            <div class="resume-edu-info3">
+                <p3>
+                    June 2024 - July 2024
+                    Internship
+                    Artificial Intelligence Using Python
+                    Coincent
+            </div>
+        </div>
     </body>
 </html>
