started styling resume page

--- a/LEVEL-1/TASK-1/resume.html
+++ b/LEVEL-1/TASK-1/resume.html
@@ -47,5 +47,6 @@
                     Coincent
             </div>
         </div>
+        <a href="index.html" class="close-btn"> X </a>
     </body>
 </html>
