--- a/LEVEL-1/TASK-1/resume.html
+++ b/LEVEL-1/TASK-1/resume.html
@@ -23,28 +23,30 @@
         <div class="resume-edu">
             <h3>My Education</h3>
             <div class="resume-edu-info1">
-                <div class="overlay-edu"></div>
+                <div class="overlay-edu1"></div>
                 <p1>
-                    2015 - 2022
-                    10th/12th Education
+                    2015 - 2022<br>
+                    10th/12th Education<br>
                     Jawahar Navodaya Vidyalay Lakkidi, Wayanad, Kerala
                 </p1>
             </div>
             <div class="resume-edu-info2">
-                <div class="overlay-edu"></div>
+                <div class="overlay-edu2"></div>
                 <p2>
-                    2023-2027
-                    Btech. Artificial Intelligence aAnd Data Science
+                    2023-2027<br>
+                    Btech. Artificial Intelligence aAnd Data Science<br>
                     Karunya Institute of Technology and Science Coimbatore, Tamil nadu
                 </p2>
             </div>
             <h4>My Experience</h4>
             <div class="resume-edu-info3">
+                <div class="overlay-edu3"></div>
                 <p3>
-                    June 2024 - July 2024
-                    Internship
-                    Artificial Intelligence Using Python
+                    June 2024 - July 2024<br>
+                    Internship<br>
+                    Artificial Intelligence Using Python<br>
                     Coincent
+                </p3>
             </div>
         </div>
         <a href="index.html" class="close-btn"> X </a>
