--- a/LEVEL-1/TASK-1/resume.html
+++ b/LEVEL-1/TASK-1/resume.html
@@ -49,6 +49,12 @@
                 </p3>
             </div>
         </div>
+        <div class="dwnld-btn">
+            <a href="" class="download-btn" download>
+            <i class="fas fa-download"></i>
+            <span>Download CV</span>
+            </a>
+        </div>
         <a href="index.html" class="close-btn"> X </a>
     </body>
 </html>
