--- a/LEVEL-1/TASK-1/contacts.html
+++ b/LEVEL-1/TASK-1/contacts.html
@@ -12,7 +12,55 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
     </head>
-    <body>
 
+    <body>
+        <div class="overlay"></div>
+        <div class="contacts-head">
+            <h1>CONTACT</h1>
+            <h2>GET IN TOUCH</h2>
+        </div>
+
+        <div class="contacts-secondary-head">
+            <h3>Message Me</h3>
+            <h4>Contact Info</h4>
+        </div>
+
+        <div class="contacts-text-field">
+            <input type="text" class="name " placeholder="Enter Name"/>
+            <input type="email" class="email" placeholder="Enter E-mail"/>
+            <input type="text" class="subject" placeholder="Enter Subject"/>
+            <input type="text" class="message" placeholder="Enter Message"/>
+        </div>
+
+        <div class="contacts-info">
+            <p1> Always available to collaborate on projects, journals and papers. </p1>
+        </div>
+
+        <div class="contacts-info-main">
+            <p1>Name</p1>
+            <p2>Location</p2>
+            <p3>Call Me</p3>
+            <p4>Email</p4>
+        </div>
+
+        <div class="contacts-info-sub">
+            <p1>Devanandhana P S</p1>
+            <p2>Karunya Institute of Technology and Science, Coimbatore, Tamil Nadu, 641114</p2>
+            <p3>6238198883</p3>
+            <p4>1115d.va@gmail.com</p4>
+        </div>
+
+        <div class="contacts-icon">
+            <i class="fas fa-user"></i>
+            <i class="fas fa-map-marker-alt"></i>
+            <i class="fas fa-phone"></i>
+            <i class="fas fa-envelope"></i>
+        </div>
+
+        <div class="contacts-footer">
+            <p1>Copyright &copy; 2025 Devanandhana. All Rights Reserved.</p1>
+        </div>
+
+        <a href="index.html" class="close-btn"> X </a>
     </body>
 </html>
