updated contacts page

--- a/LEVEL-1/TASK-1/contacts.html
+++ b/LEVEL-1/TASK-1/contacts.html
@@ -29,33 +29,28 @@
             <input type="text" class="name " placeholder="Enter Name"/>
             <input type="email" class="email" placeholder="Enter E-mail"/>
             <input type="text" class="subject" placeholder="Enter Subject"/>
-            <input type="text" class="message" placeholder="Enter Message"/>
+            <textarea type="text" class="message" placeholder="Enter Message"></textarea>
         </div>
 
         <div class="contacts-info">
-            <p1> Always available to collaborate on projects, journals and papers. </p1>
+            <p1> Always available to collaborate on projects, journals<br> and papers. </p1>
         </div>
 
         <div class="contacts-info-main">
-            <p1>Name</p1>
-            <p2>Location</p2>
-            <p3>Call Me</p3>
-            <p4>Email</p4>
-        </div>
-
-        <div class="contacts-info-sub">
-            <p1>Devanandhana P S</p1>
-            <p2>Karunya Institute of Technology and Science, Coimbatore, Tamil Nadu, 641114</p2>
-            <p3>6238198883</p3>
-            <p4>1115d.va@gmail.com</p4>
+            <p1><strong>Name</strong><br>Devanandhana P S</p1>
+            <p2><strong><br>Location</strong><br>Karunya Institute of Technology and Science, Coimbatore, Tamil Nadu, 641114</p2>
+            <p3><strong><br>Call Me</strong><br>6238198883</p3>
+            <p4><strong><br>Email</strong><br>1115d.va@gmail.com</p4>
         </div>
 
         <div class="contacts-icon">
-            <i class="fas fa-user"></i>
-            <i class="fas fa-map-marker-alt"></i>
-            <i class="fas fa-phone"></i>
-            <i class="fas fa-envelope"></i>
+            <i class="fas fa-user"><br></i>
+            <i class="fas fa-map-marker-alt"><br></i>
+            <i class="fas fa-phone"><br></i>
+            <i class="fas fa-envelope"><br></i>
         </div>
+
+        <div class="vertical-divider"></div>
 
         <div class="contacts-footer">
             <p1>Copyright &copy; 2025 Devanandhana. All Rights Reserved.</p1>
