--- a/LEVEL-1/TASK-1/contacts.html
+++ b/LEVEL-1/TASK-1/contacts.html
@@ -38,7 +38,7 @@
 
         <div class="contacts-info-main">
             <p1><strong>Name</strong><br>Devanandhana P S</p1>
-            <p2><strong><br>Location</strong><br>Karunya Institute of Technology and Science, Coimbatore, Tamil Nadu, 641114</p2>
+            <p2><strong><br>Location</strong><br>Karunya Institute of Technology and Science,<br> Coimbatore, Tamil Nadu, 641114</p2>
             <p3><strong><br>Call Me</strong><br>6238198883</p3>
             <p4><strong><br>Email</strong><br>1115d.va@gmail.com</p4>
         </div>
@@ -52,9 +52,9 @@
 
         <div class="vertical-divider"></div>
 
-        <div class="contacts-footer">
+        <footer class="contacts-footer">
             <p1>Copyright &copy; 2025 Devanandhana. All Rights Reserved.</p1>
-        </div>
+        </footer>
 
         <a href="index.html" class="close-btn"> X </a>
     </body>
