updated files and completed contact page

--- a/LEVEL-1/TASK-1/contacts.html
+++ b/LEVEL-1/TASK-1/contacts.html
@@ -31,8 +31,8 @@
             <input type="text" class="subject" placeholder="Enter Subject"/>
             <textarea type="text" class="message" placeholder="Enter Message"></textarea>
             <a href="" class="submit" download>
-            <i class="fas fa-telegram-plane"></i>
             <span>Message Me</span>
+            <i class="fas fa-paper-plane"></i>
             </a>
         </div>
 
