updatted projects file

--- a/LEVEL-1/TASK-1/projects.html
+++ b/LEVEL-1/TASK-1/projects.html
@@ -12,7 +12,18 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
     </head>
-    <body>
 
+    <body>
+        <div class="projects-head">
+            <h1>PORTFOLIO</h1>
+            <h2>PROJECTS</h2>
+        </div>
+
+        <div class="projects-box">
+
+        </div>
+
+
+        <a href="index.html" class="close-btn"> X </a>
     </body>
 </html>
