updated projects page

--- a/LEVEL-1/TASK-1/projects.html
+++ b/LEVEL-1/TASK-1/projects.html
@@ -19,10 +19,20 @@
             <h2>PROJECTS</h2>
         </div>
 
-        <div class="projects-box">
-
+        <div class="projects-filters">
+            <button class="filter-btn active">All</button>
+            <button class="filter-btn">Web Design</button>
+            <button class="filter-btn">Machine Learning</button>
         </div>
 
+        <div class="projects-grid">
+            <div class="project-item">
+                <img src="your-image1.jpg" alt="Project 1">
+                <div class="overlay">
+                    <h3>Project Title</h3>
+                </div>
+            </div>
+        </div>
 
         <a href="index.html" class="close-btn"> X </a>
     </body>
