updated index, project files

--- a/LEVEL-1/TASK-1/projects.html
+++ b/LEVEL-1/TASK-1/projects.html
@@ -14,6 +14,7 @@
     </head>
 
     <body>
+        <div class="overlay"></div>
         <div class="projects-head">
             <h1>PORTFOLIO</h1>
             <h2>PROJECTS</h2>
@@ -28,6 +29,13 @@
         <div class="projects-grid">
             <div class="project-item">
                 <img src="your-image1.jpg" alt="Project 1">
+                <div class="overlay">
+                    <h3>Project Title</h3>
+                </div>
+            </div>
+
+            <div class="project-item">
+                <img src="your-image1.jpg" alt="Project 2">
                 <div class="overlay">
                     <h3>Project Title</h3>
                 </div>
