--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -36,7 +36,7 @@
 
         <div class="socials">
             <a href="" target="_blank"> <i class="fab fa-linkedin-in"></i> </a>
-            <a href="" target="_blank"> <i class="fab fa-github"></i></a>
+            <a href="https://github.com/deva-nandhana15" target="_blank"> <i class="fab fa-github"></i></a>
             <a href="" target="_blank"> <i  class="fab fa-instagram"></i></a>
         </div>
     </div>
