added changes to projects file

--- a/LEVEL-1/TASK-1/projects.html
+++ b/LEVEL-1/TASK-1/projects.html
@@ -20,25 +20,11 @@
             <h2>PROJECTS</h2>
         </div>
 
-        <div class="projects-filters">
-            <button class="filter-btn active">All</button>
-            <button class="filter-btn">Web Design</button>
-            <button class="filter-btn">Machine Learning</button>
-        </div>
-
-        <div class="projects-grid">
-            <div class="project-item">
-                <img src="your-image1.jpg" alt="Project 1">
-                <div class="overlay">
-                    <h3>Project Title</h3>
-                </div>
-            </div>
-
-            <div class="project-item">
-                <img src="your-image1.jpg" alt="Project 2">
-                <div class="overlay">
-                    <h3>Project Title</h3>
-                </div>
+       <div class="projects-filter">
+            <div class="filter-links">
+                <button>All</button>
+                <button>Web Design</button>
+                <button>Machine Learning</button>
             </div>
         </div>
 
