--- a/LEVEL-1/TASK-3/index.html
+++ b/LEVEL-1/TASK-3/index.html
@@ -11,22 +11,29 @@
         <div class="calculator">
             <input type="text" class="display" id="display" disabled />
             <div class="buttons">
-                <button onclick="appendValue('+')">+</button>
-                <button onclick="appendValue('-')">-</button>
-                <button onclick="appendValue('*')">X</button>
+                <button onclick="clearDisplay()">C</button>
+                <button onclick="appendValue('()')">()</button>
+                <button onclick="deleteLast()">DEL</button>
                 <button onclick="appendValue('/')">÷</button>
-                <button onclick="calculate()">=</button>
-                <button onclick="appendValue('.')">.</button>
-                <button onclick="appendValue('1')">1</button>
-                <button onclick="appendValue('2')">2</button>
-                <button onclick="appendValue('3')">3</button>
-                <button onclick="appendValue('4')">4</button>
-                <button onclick="appendValue('5')">5</button>
-                <button onclick="appendValue('6')">6</button>
+
                 <button onclick="appendValue('7')">7</button>
                 <button onclick="appendValue('8')">8</button>
                 <button onclick="appendValue('9')">9</button>
+                <button onclick="appendValue('*')">×</button>
+
+                <button onclick="appendValue('4')">4</button>
+                <button onclick="appendValue('5')">5</button>
+                <button onclick="appendValue('6')">6</button>
+                <button onclick="appendValue('-')">−</button>
+
+                <button onclick="appendValue('1')">1</button>
+                <button onclick="appendValue('2')">2</button>
+                <button onclick="appendValue('3')">3</button>
+                <button onclick="appendValue('+')">+</button>
+
+                <button onclick="appendValue('.')">.</button>
                 <button onclick="appendValue('0')">0</button>
+                <button class="equal" onclick="calculate()">=</button>
             </div>
         </div>
         
