--- a/LEVEL-1/TASK-3/index.html
+++ b/LEVEL-1/TASK-3/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
         <title>Calculator</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <div class="calculator">
+            <h1>Calculator</h1>
             <input type="text" class="display" id="display" disabled />
             <div class="buttons">
                 <button onclick="clearDisplay()">C</button>
