--- a/LEVEL-1/TASK-3/index.html
+++ b/LEVEL-1/TASK-3/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="calculator">
             <h1>Calculator</h1>
-            <input type="text" class="display" id="display" disabled />
+            <input type="text" class="display" id="display" />
             <div class="buttons">
                 <button onclick="clearDisplay()">C</button>
                 <button onclick="appendValue('()')">()</button>
