--- a/LEVEL-1/TASK-3/index.html
+++ b/LEVEL-1/TASK-3/index.html
@@ -36,6 +36,7 @@
                 <button onclick="appendValue('.')">.</button>
                 <button onclick="appendValue('0')">0</button>
                 <button class="equal" onclick="calculate()">=</button>
+                <div class="placeholder"></div> 
             </div>
         </div>
         
