updtaed task-3 folder

--- a/LEVEL-1/TASK-3/index.html
+++ b/LEVEL-1/TASK-3/index.html
@@ -38,7 +38,7 @@
                 <button class="equal" onclick="calculate()">=</button>
             </div>
         </div>
-        
+        <img src="flower.png" class="flower">
         <script src="script.js"></script>
     </body>
 </html>
