--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Landing Page</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>La Lueur</title>
+        <link rel="stylesheet" href="style.css">
+        <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
+        <main>
+            <header>
+                <h1>L A L U E U R</h1>
+                <nav class="nav-links">
+                    <a><i class="fas fa-shopping-cart"></i></a>
+                    <a><i class="far fa-heart"></i></a>
+                    <a><i class="fas fa-bars"></i></a>
+                </nav>
+                </header>
 
+            <section class="hero-slider">
+                <div class="slides">
+                    <div class="slide" id="slide1">
+                        <div class="slide-text">
+                            <h2>Welcome to La Lueur</h2>
+                            <p>Mumbai, since 2005</p>
+                        </div>
+                    </div>
+                    <div class="slide" id="slide2">
+                        <div class="slide-text">
+                            <h2>Glow Like Never Before</h2>
+                            <p>Skincare that loves you back</p>
+                        </div>
+                    </div>
+                    <div class="slide" id="slide3">
+                        <div class="slide-text">
+                            <h2>Elegance, Naturally</h2>
+                            <p>Timeless beauty from head to toe</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            
+        </main>
+        
     </body>
 </html>
