--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>La Lueur</title>
         <link rel="stylesheet" href="style.css">
-        <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <main>
             <header>
-                <h1>L A L U E U R</h1>
+                <h1>L&nbsp;A&nbsp;&nbsp;&nbsp;L&nbsp;U&nbsp;E&nbsp;U&nbsp;R</h1>
                 <nav class="nav-links">
                     <a><i class="fas fa-shopping-cart"></i></a>
                     <a><i class="far fa-heart"></i></a>
@@ -24,26 +24,35 @@
                 <div class="slides">
                     <div class="slide" id="slide1">
                         <div class="slide-text">
-                            <h2>Welcome to La Lueur</h2>
-                            <p>Mumbai, since 2005</p>
+                            <h2>WELCOME TO LA LUEUR</h2>
+                            <p1>BANGLORE&nbsp;.&nbsp;SINCE 2005</p1>
                         </div>
                     </div>
                     <div class="slide" id="slide2">
                         <div class="slide-text">
                             <h2>Glow Like Never Before</h2>
+                            <p1>M&nbsp;U&nbsp;M&nbsp;B&nbsp;A&nbsp;I&nbsp;.&nbsp;S&nbsp;I&nbsp;N&nbsp;C&nbsp;E&nbsp;2&nbsp;0&nbsp;0&nbsp;5</p1>
                             <p>Skincare that loves you back</p>
                         </div>
                     </div>
                     <div class="slide" id="slide3">
                         <div class="slide-text">
                             <h2>Elegance, Naturally</h2>
+                            <p1>BANGLORE&nbsp;.&nbsp;SINCE 2005</p1>
+                            <p>Timeless beauty from head to toe</p>
+                        </div>
+                    </div>
+                    <div class="slide" id="slide4">
+                        <div class="slide-text">
+                            <h2>Elegance, Naturally</h2>
+                            <p1>BANGLORE&nbsp;.&nbsp;SINCE 2005</p1>
                             <p>Timeless beauty from head to toe</p>
                         </div>
                     </div>
                 </div>
             </section>
 
-            
+
         </main>
         
     </body>
