updated index and style files

--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -14,38 +14,38 @@
             <header>
                 <h1>L&nbsp;A&nbsp;&nbsp;&nbsp;L&nbsp;U&nbsp;E&nbsp;U&nbsp;R</h1>
                 <nav class="nav-links">
-                    <a><i class="fas fa-shopping-cart"></i></a>
-                    <a><i class="far fa-heart"></i></a>
-                    <a><i class="fas fa-bars"></i></a>
+                    <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                    <a href="#"><i class="far fa-heart"></i></a>
+                    <a href="#"><i class="fas fa-bars"></i></a>
                 </nav>
                 </header>
 
-            <section class="hero-slider">
+            <section class="auto-slider">
                 <div class="slides">
                     <div class="slide" id="slide1">
-                        <div class="slide-text">
+                        <div class="text-overlay">
                             <h2>WELCOME TO LA LUEUR</h2>
-                            <p1>BANGLORE&nbsp;.&nbsp;SINCE 2005</p1>
+                            <p1>M&nbsp;U&nbsp;M&nbsp;B&nbsp;A&nbsp;I&nbsp;.&nbsp;S&nbsp;I&nbsp;N&nbsp;C&nbsp;E&nbsp;2&nbsp;0&nbsp;0&nbsp;5</p1>
                         </div>
                     </div>
                     <div class="slide" id="slide2">
-                        <div class="slide-text">
+                        <div class="text-overlay">
                             <h2>Glow Like Never Before</h2>
                             <p1>M&nbsp;U&nbsp;M&nbsp;B&nbsp;A&nbsp;I&nbsp;.&nbsp;S&nbsp;I&nbsp;N&nbsp;C&nbsp;E&nbsp;2&nbsp;0&nbsp;0&nbsp;5</p1>
                             <p>Skincare that loves you back</p>
                         </div>
                     </div>
                     <div class="slide" id="slide3">
-                        <div class="slide-text">
+                        <div class="text-overlay">
                             <h2>Elegance, Naturally</h2>
-                            <p1>BANGLORE&nbsp;.&nbsp;SINCE 2005</p1>
+                            <p1>M&nbsp;U&nbsp;M&nbsp;B&nbsp;A&nbsp;I&nbsp;.&nbsp;S&nbsp;I&nbsp;N&nbsp;C&nbsp;E&nbsp;2&nbsp;0&nbsp;0&nbsp;5</p1>
                             <p>Timeless beauty from head to toe</p>
                         </div>
                     </div>
                     <div class="slide" id="slide4">
-                        <div class="slide-text">
+                        <div class="text-overlay">
                             <h2>Elegance, Naturally</h2>
-                            <p1>BANGLORE&nbsp;.&nbsp;SINCE 2005</p1>
+                            <p1>M&nbsp;U&nbsp;M&nbsp;B&nbsp;A&nbsp;I&nbsp;.&nbsp;S&nbsp;I&nbsp;N&nbsp;C&nbsp;E&nbsp;2&nbsp;0&nbsp;0&nbsp;5</p1>
                             <p>Timeless beauty from head to toe</p>
                         </div>
                     </div>
