Updated index and style files of task-2

--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -24,29 +24,26 @@
                 <div class="slides">
                     <div class="slide" id="slide1">
                         <div class="text-overlay">
-                            <h2>WELCOME TO LA LUEUR</h2>
-                            <p1>M&nbsp;U&nbsp;M&nbsp;B&nbsp;A&nbsp;I&nbsp;.&nbsp;S&nbsp;I&nbsp;N&nbsp;C&nbsp;E&nbsp;2&nbsp;0&nbsp;0&nbsp;5</p1>
+                            <h2>W&nbsp;E&nbsp;L&nbsp;C&nbsp;O&nbsp;M&nbsp;E&nbsp;&nbsp;&nbsp;T&nbsp;O&nbsp;&nbsp;&nbsp;L&nbsp;A&nbsp;L&nbsp;U&nbsp;E&nbsp;U&nbsp;R</h2>
+                            <p1>M&nbsp;U&nbsp;M&nbsp;B&nbsp;A&nbsp;I&nbsp;.&nbsp;S&nbsp;I&nbsp;N&nbsp;C&nbsp;E&nbsp;&nbsp;2&nbsp;0&nbsp;0&nbsp;5</p1>
                         </div>
                     </div>
                     <div class="slide" id="slide2">
                         <div class="text-overlay">
-                            <h2>Glow Like Never Before</h2>
-                            <p1>M&nbsp;U&nbsp;M&nbsp;B&nbsp;A&nbsp;I&nbsp;.&nbsp;S&nbsp;I&nbsp;N&nbsp;C&nbsp;E&nbsp;2&nbsp;0&nbsp;0&nbsp;5</p1>
-                            <p>Skincare that loves you back</p>
+                            <h2>C&nbsp;L&nbsp;E&nbsp;A&nbsp;N&nbsp;&nbsp;S&nbsp;K&nbsp;I&nbsp;N&nbsp;&nbsp;.&nbsp;&nbsp;C&nbsp;L&nbsp;E&nbsp;A&nbsp;R&nbsp;&nbsp;M&nbsp;I&nbsp;N&nbsp;D</h2>
+                            <p>FOR THE GLOW YOU DESERVE</p>
                         </div>
                     </div>
                     <div class="slide" id="slide3">
                         <div class="text-overlay">
-                            <h2>Elegance, Naturally</h2>
-                            <p1>M&nbsp;U&nbsp;M&nbsp;B&nbsp;A&nbsp;I&nbsp;.&nbsp;S&nbsp;I&nbsp;N&nbsp;C&nbsp;E&nbsp;2&nbsp;0&nbsp;0&nbsp;5</p1>
-                            <p>Timeless beauty from head to toe</p>
+                            <h2>H&nbsp;Y&nbsp;D&nbsp;R&nbsp;A&nbsp;T&nbsp;E&nbsp;&nbsp;.&nbsp;&nbsp;I&nbsp;N&nbsp;D&nbsp;U&nbsp;L&nbsp;G&nbsp;E&nbsp;&nbsp;.&nbsp;&nbsp;R&nbsp;E&nbsp;P&nbsp;E&nbsp;A&nbsp;T</h2>
+                            <p>LOVE YOUR EVERY INCH.</p>
                         </div>
                     </div>
                     <div class="slide" id="slide4">
                         <div class="text-overlay">
-                            <h2>Elegance, Naturally</h2>
-                            <p1>M&nbsp;U&nbsp;M&nbsp;B&nbsp;A&nbsp;I&nbsp;.&nbsp;S&nbsp;I&nbsp;N&nbsp;C&nbsp;E&nbsp;2&nbsp;0&nbsp;0&nbsp;5</p1>
-                            <p>Timeless beauty from head to toe</p>
+                            <h2>T&nbsp;A&nbsp;M&nbsp;E&nbsp;&nbsp;.&nbsp;&nbsp;N&nbsp;O&nbsp;U&nbsp;R&nbsp;I&nbsp;S&nbsp;H&nbsp;&nbsp;.&nbsp;&nbsp;S&nbsp;L&nbsp;A&nbsp;Y</h2>
+                            <p>BEAUTY STARTS AT THE ROOTS.</p>
                         </div>
                     </div>
                 </div>
