--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -49,8 +49,16 @@
                 </div>
             </section>
 
+            <section class="category-buttons-section">
+                <div class="category-buttons">
+                    <div class="category skincare" onclick="location.href='skincare.html'">SKINCARE</div>
+                    <div class="category bodycare" onclick="location.href='bodycare.html'">BODYCARE</div>
+                    <div class="category haircare" onclick="location.href='haircare.html'">HAIRCARE</div>
+                </div>
+                
+            </section>
 
-        </main>
-        
+
+        </main>        
     </body>
 </html>
