updated both index and style files

--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -49,13 +49,30 @@
                 </div>
             </section>
 
+            <section class="category-intro">
+                <h2>S&nbsp;H&nbsp;O&nbsp;P&nbsp;&nbsp;&nbsp;B&nbsp;Y&nbsp;&nbsp;&nbsp;E&nbsp;S&nbsp;S&nbsp;E&nbsp;N&nbsp;T&nbsp;I&nbsp;A&nbsp;L&nbsp;S.</h2>
+            </section>
+
             <section class="category-buttons-section">
                 <div class="category-buttons">
-                    <div class="category skincare" onclick="location.href='skincare.html'">SKINCARE</div>
-                    <div class="category bodycare" onclick="location.href='bodycare.html'">BODYCARE</div>
-                    <div class="category haircare" onclick="location.href='haircare.html'">HAIRCARE</div>
+                    <div class="category skincare" onclick="location.href='#'">S&nbsp;K&nbsp;I&nbsp;N&nbsp;C&nbsp;A&nbsp;R&nbsp;E</div>
+                    <div class="category bodycare" onclick="location.href='#'">B&nbsp;O&nbsp;D&nbsp;Y&nbsp;C&nbsp;A&nbsp;R&nbsp;E</div>
+                    <div class="category haircare" onclick="location.href='#'">H&nbsp;A&nbsp;I&nbsp;R&nbsp;C&nbsp;A&nbsp;R&nbsp;E</div>
                 </div>
                 
+            </section>
+
+            <section class="brand-marquee">
+                <div class="brand-track">
+                    <img src="assets/brands/loreal.png" alt="L'Oréal Paris">
+                    <img src="assets/brands/minimalist.png" alt="Minimalist">
+                    <img src="assets/brands/ordinary.png" alt="The Ordinary">
+                    <img src="assets/brands/dotkey.png" alt="Dot & Key">
+                    <img src="assets/brands/cerave.png" alt="CeraVe">
+                    <img src="assets/brands/rhode.png" alt="Rhode">
+                    <img src="assets/brands/dermaco.png" alt="Derma Co">
+                    <img src="assets/brands/kerastase.png" alt="Kérastase">
+                </div>
             </section>
 
 
