updated the next part of the landing page

--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -50,7 +50,8 @@
             </section>
 
             <section class="category-intro">
-                <h2>S&nbsp;H&nbsp;O&nbsp;P&nbsp;&nbsp;&nbsp;B&nbsp;Y&nbsp;&nbsp;&nbsp;E&nbsp;S&nbsp;S&nbsp;E&nbsp;N&nbsp;T&nbsp;I&nbsp;A&nbsp;L&nbsp;S.</h2>
+                <h2>S&nbsp;H&nbsp;O&nbsp;P&nbsp;&nbsp;&nbsp;B&nbsp;Y&nbsp;&nbsp;&nbsp;E&nbsp;S&nbsp;S&nbsp;
+                    E&nbsp;N&nbsp;T&nbsp;I&nbsp;A&nbsp;L&nbsp;S</h2>
             </section>
 
             <section class="category-buttons-section">
@@ -62,19 +63,30 @@
                 
             </section>
 
-            <section class="brand-marquee">
-                <div class="brand-track">
-                    <img src="assets/brands/loreal.png" alt="L'Oréal Paris">
-                    <img src="assets/brands/minimalist.png" alt="Minimalist">
-                    <img src="assets/brands/ordinary.png" alt="The Ordinary">
-                    <img src="assets/brands/dotkey.png" alt="Dot & Key">
-                    <img src="assets/brands/cerave.png" alt="CeraVe">
-                    <img src="assets/brands/rhode.png" alt="Rhode">
-                    <img src="assets/brands/dermaco.png" alt="Derma Co">
-                    <img src="assets/brands/kerastase.png" alt="Kérastase">
-                </div>
+            <section class="brand-logos">
+                <img src="assets/brands/clinique.png" alt="The Ordinary">
+                <img src="assets/brands/cerave.png" alt="L'Oréal Paris">
+                <img src="assets/brands/ordinary.png" alt="Dot & Key">
+                <img src="assets/brands/olay.png" alt="CeraVe">
+                <img src="assets/brands/cetaphil.png" alt="Minimalist">
+                <img src="assets/brands/neutrogena.png" alt="Kérastase">
             </section>
 
+            <section class="masonry-gallery">
+                <h2>T&nbsp;H&nbsp;E&nbsp;&nbsp;G&nbsp;L&nbsp;O&nbsp;W&nbsp;&nbsp;G&nbsp;A&nbsp;L&nbsp;L&nbsp;E&nbsp;R&nbsp;Y</h2>
+                <div class="masonry">
+                    <a href="#"><img src="assets/gallery/photo1.jpg" alt="Photo 1"></a>
+                    <a href="#"><img src="assets/gallery/photo2.jpg" alt="Photo 2"></a>
+                    <a href="#"><img src="assets/gallery/photo3.jpg" alt="Photo 3"></a>
+                    <a href="#"><img src="assets/gallery/photo4.jpg" alt="Photo 4"></a>
+                    <a href="#"><img src="assets/gallery/photo5.jpg" alt="Photo 5"></a>
+                    <a href="#"><img src="assets/gallery/photo6.jpg" alt="Photo 6"></a>
+                </div>
+
+                <div class="load-more-wrapper">
+                    <button class="load-more-btn">Load More</button>
+                </div>
+            </section>
 
         </main>        
     </body>
