styled the gallery

--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -50,8 +50,7 @@
             </section>
 
             <section class="category-intro">
-                <h2>S&nbsp;H&nbsp;O&nbsp;P&nbsp;&nbsp;&nbsp;B&nbsp;Y&nbsp;&nbsp;&nbsp;E&nbsp;S&nbsp;S&nbsp;
-                    E&nbsp;N&nbsp;T&nbsp;I&nbsp;A&nbsp;L&nbsp;S</h2>
+                <h2>S&nbsp;H&nbsp;O&nbsp;P&nbsp;&nbsp;&nbsp;B&nbsp;Y&nbsp;&nbsp;&nbsp;E&nbsp;S&nbsp;S&nbsp;E&nbsp;N&nbsp;T&nbsp;I&nbsp;A&nbsp;L&nbsp;S</h2>
             </section>
 
             <section class="category-buttons-section">
@@ -75,12 +74,17 @@
             <section class="masonry-gallery">
                 <h2>T&nbsp;H&nbsp;E&nbsp;&nbsp;G&nbsp;L&nbsp;O&nbsp;W&nbsp;&nbsp;G&nbsp;A&nbsp;L&nbsp;L&nbsp;E&nbsp;R&nbsp;Y</h2>
                 <div class="masonry">
-                    <a href="#"><img src="assets/gallery/photo1.jpg" alt="Photo 1"></a>
-                    <a href="#"><img src="assets/gallery/photo2.jpg" alt="Photo 2"></a>
-                    <a href="#"><img src="assets/gallery/photo3.jpg" alt="Photo 3"></a>
-                    <a href="#"><img src="assets/gallery/photo4.jpg" alt="Photo 4"></a>
-                    <a href="#"><img src="assets/gallery/photo5.jpg" alt="Photo 5"></a>
-                    <a href="#"><img src="assets/gallery/photo6.jpg" alt="Photo 6"></a>
+                    <a href="#"><img src="assets/gallery/1.jpg" alt="Photo 1"></a>
+                    <a href="#"><img src="assets/gallery/2.jpg" alt="Photo 2"></a>
+                    <a href="#"><img src="assets/gallery/3.jpg" alt="Photo 3"></a>
+                    <a href="#"><img src="assets/gallery/4.jpg" alt="Photo 4"></a>
+                    <a href="#"><img src="assets/gallery/5.jpg" alt="Photo 5"></a>
+                    <a href="#"><img src="assets/gallery/6.jpg" alt="Photo 6"></a>
+                    <a href="#"><img src="assets/gallery/7.jpg" alt="Photo 7"></a>
+                    <a href="#"><img src="assets/gallery/8.jpg" alt="Photo 8"></a>
+                    <a href="#"><img src="assets/gallery/9.jpg" alt="Photo 9"></a>
+                    <a href="#"><img src="assets/gallery/10.jpg" alt="Photo 10"></a>
+                    <a href="#"><img src="assets/gallery/11.jpg" alt="Photo 11"></a>
                 </div>
 
                 <div class="load-more-wrapper">
